--- a/index.html
+++ b/index.html
@@ -20,26 +20,45 @@
         <!-- a) Заголовок первого уровня со своим ФИО -->
         <h1>Чуник Виктория Владимировна</h1>
         <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
-        <p>Учусь в IT-INCUBATOR,люблю читать книги по прогромированию,слушать подкасты о разных языках прогроммировния
-            увлекаюсь веб разработкой
+        <p>Учусь в IT-INCUBATOR,люблю читать книги по прогромированию,увлекаюсь веб разработкой
+
         </p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
-         <img src="//unsplash.it/600/200" alt="случайное фото"/>
+        <img src="./assets/imges/cars.jpg" alt="случайное фото"/>
     </section>
 
     <section data-cy="hw1-section-about-pre">
         <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
+        <label for="country"></label>
+        <select id="country" name="country">
+        <option value="mosccow">Москва</option>
+        <option value="saint Peterburg" selected>Санкт Петербург</option>
+        <option value="astrakhan">Астрахань</option>
+        </select>
+
         <div data-cy="hw1-unordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Любимые фреймворки</h2>
             <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+            <ul>
+                <li>React</li>
+                <li>Angular</li>
+                <li>Vue</li>
+            </ul>
         </div>
         <div data-cy="hw1-ordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+            <h2>Рейтинг любимых книг</h2>
             <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+            <ol>
+                <li>JavaScript for kids</li>
+                <li>Html5,Css JavaScript. Исчерпывающее руководство</li>
+                <li>HTML5 + CSS основы современного web - дизайна</li>
+            </ol>
         </div>
         <div data-cy="hw1-skills-box-pre">
             <h2>Мои скиллы</h2>
@@ -47,20 +66,71 @@
                 - В подписи укажи названия любых тем по верстке (все, что знаешь или слышал).
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
+            <form>
+                <label for="html">
+                    <input id="html" type="checkbox"  name="html"checked>
+                    HTML
+                </label>
+                <label for="css">
+                    <input id="css" type="checkbox"  name="css" checked>
+                    CSS
+                </label>
+                <label for="javaScript">
+                    <input id="avaScript" type="checkbox" name="avaScript">
+                    JavaScript
+                </label>
+                <label for="Jquery">
+                    <input  id="Jquery" type="checkbox" name="Jquery">
+                    Jquery
+                </label>
+                <label for="react">
+                    <input id="react" type="checkbox" name="react">
+                    React
+                </label>
+            </form>
         </div>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
+        <input type="text" placeholder="Новый скилл">
         <!-- 6) Создай здесь кнопку “Добавить” -->
+         <button name="button">Добавить</button>
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
-
+        <hr>
         <table data-cy="hw-about-table-pre">
             <!-- 8) В таблице сделай 5 строк и 3 столбца.
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать все свободное место по горизонтали (ширине). Таблицу можно заполнять любыми данными -->
+            <table border="1">
+                <tr>
+                    <th>П/П</th>
+                    <th>Наименование</th>
+                    <th>Колличество</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Монитор</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Клавиатура</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Мышь</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                <td colspan="2">Итого:</td>
+                <td>4</td>
+                </tr>
+            </table>
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
         <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+        <a href="https://it-incubator.io/">it-incubator</a>
     </footer>
 </body>
 </html>
