--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
          <button name="button">Добавить</button>
         <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
         <hr>
-        <table data-cy="hw-about-table-pre">
+        <table data-cy="hw-about-table-pre" border="1">
             <!-- 8) В таблице сделай 5 строк и 3 столбца.
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать все свободное место по горизонтали (ширине). Таблицу можно заполнять любыми данными -->
-            <table border="1">
+            <!-- <table border="1"> -->
                 <tr>
                     <th>П/П</th>
                     <th>Наименование</th>
@@ -125,7 +125,7 @@
                 <td colspan="2">Итого:</td>
                 <td>4</td>
                 </tr>
-            </table>
+            <!-- </table> -->
         </table>
     </section>
     <footer data-cy="hw-footer-pre">
